@@ -1,5 +1,5 @@
 AUX apr-util-1.3.9-support_berkeley_db-4.8.patch 4443 RMD160 f378ba707441854a0b19f07a396f7a7be041e715 SHA1 ce3cf0caa6c9a9b6cddb9b0b49366dc132eab398 SHA256 11a8163c75a279d1aa93f9bd0142a836add228a5f1232a8f85e1a128363ae8aa
 DIST apr-util-1.3.9.tar.gz 790952 RMD160 f6180ba186e8ed73831b1da78de7ec57fc1cb162 SHA1 fd2a76352353e6bc2f7cc7da80e2ab3842795199 SHA256 20897069274a026057df26b90a6424da9d70318d930c99885c451d8753b8e4d9
-EBUILD apr-util-1.3.9.ebuild 2358 RMD160 634577e98de0aef460b0aceb25a8b63c2e3776c7 SHA1 43a28c305d1183745f4126cc935b0d4f55685f0f SHA256 62b52ed2ec45e08be67cc8bbb08c15d7cc513b37c46c35a89881dcc8ee85d87d
-MISC ChangeLog 18485 RMD160 70d64487848cdbff7a0e439b873a517854a5c834 SHA1 5386f317b472a3cbc1b9cca3cc65701b76f2590b SHA256 f09d8e9413e04876024072583a6d82ea0eea85771b633a8ccc984e02c71a6b11
+EBUILD apr-util-1.3.9.ebuild 2425 RMD160 9af6df8079557b7725298c65d4cb5385f52f5bbe SHA1 408746276ffafc6cb9a86d2c9ee2876e16e83f19 SHA256 dd945d945ec26acd388b3acefef9e876336915974fa4194819c00b24f05e96f4
+MISC ChangeLog 18654 RMD160 5240dd540afd36a9b44ff2e3db303ac7607802cf SHA1 51e2199a079d440847e59f419b31a7e7e175adbb SHA256 ff4e7df1870e94bd82470de2d3fad2c13d78be42161978d21b9986a8189c7bb2
 MISC metadata.xml 229 RMD160 bb816bd761846ad578f8c1521a1f1ec6297410f4 SHA1 92fdbcb6a85ece96506733ad67a5e4e74a58a529 SHA256 8e1aafc5385805d45759406a60df79f0ce88aa1df1a58d44b596405d64c9226d
